# data-validation

./: .gitignore  CHANGELOG.md  LICENSE  README.md  data-validation.cabal  shell.nix
.github/workflows/: haskell.yml
examples/Examples/Data/: ComplexTypes.hs  ExampleSpec.hs  Main.hs  Primitives.hs
internal/Data/Validation/: Internal.hs
src/Data/: Validation.hs
src/Data/Validation/: Internal.hs  Transforms.hs
test/: Spec.hs
test/Data/: ExampleSpec.hs  ValidationSpec.hs
test/Data/Validation/: InternalSpec.hs
