cabal-version:       2.4
name:                data-validation
version:             0.1.0.0
license:             Apache-2.0
license-file:        LICENSE
author:              Alasconnect
maintainer:
category:            Data
extra-source-files:  CHANGELOG.md, README.md

library
  exposed-modules:    Data.Validation
                    , Data.Validation.Transforms
  build-depends:      base ^>=4.12.0.0
                    , containers
                    , data-validation-internal
                    , regex-tdfa
                    , template-haskell
  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:       -Wall -j -O0 -v0

library data-validation-internal
  exposed-modules:    Data.Validation.Internal
  build-depends:      base ^>=4.12.0.0
                    , containers
                    , template-haskell
  hs-source-dirs:     internal
  default-language:   Haskell2010
  ghc-options:       -Wall -j -O0 -v0

library examples-internal
  exposed-modules:    Examples.Data.ComplexTypes
                    , Examples.Data.Primitives
  build-depends:      base ^>=4.12.0.0
                    , data-validation
                    , tagged
  hs-source-dirs:     examples
  default-language:   Haskell2010
  ghc-options:       -Wall -j -O0 -v0

test-suite test-data-validation
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:    Data.ValidationSpec
                  , Data.Validation.InternalSpec
  hs-source-dirs:   test
  build-depends:    base
                  , containers
                  , data-validation
                  , data-validation-internal
                  , hspec
                  , template-haskell
  default-language:   Haskell2010
  ghc-options:      -threaded -Wall
