cabal-version:       2.4
name:                data-validation
version:             0.1.2.3
synopsis:            A library for creating type safe validations.
description:
  A library for creating type safe validations using typeclasses.
homepage:            https://github.com/alasconnect/data-validation
license:             Apache-2.0
license-file:        LICENSE
author:              Ampersand
maintainer:          Ampersand <software@ampersandtech.com>
copyright:           2020 AlasConnect LLC
category:            Data
extra-source-files:  CHANGELOG.md, README.md

source-repository head
  type: git
  location: https://github.com/alasconnect/data-validation
  tag: 0.1.2.3

library
  exposed-modules:    Data.Validation
                    , Data.Validation.Internal
                    , Data.Validation.Transforms
  build-depends:      base >= 4.11.0.1 && < 5
                    , template-haskell >= 2.13 && < 2.16
                    , containers >= 0.5.11 && < 0.7
  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:       -Wall -v0

-- test-suite test-examples
--   type:               exitcode-stdio-1.0
--   main-is:            Spec.hs
--   other-modules:      Examples.Data.ComplexTypes
--                     , Examples.Data.Primitives
--                     , Examples.Data.ExampleSpec
--   hs-source-dirs:     examples
--   build-depends:      base >= 4.11.0.1 && < 5
--                     , data-validation
--                     , hpec
--                     , regex-tdfa
--   default-language:   Haskell2010
--   ghc-options:       -threaded -Wall

test-suite test-data-validation
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:    Data.ValidationSpec
                  , Data.Validation.InternalSpec
  hs-source-dirs:   test
  build-depends:    base
                  , containers
                  , data-validation
                  , hspec
                  , template-haskell
  default-language:   Haskell2010
  ghc-options:      -threaded -Wall

-- test-suite test-data-validation
--   type:             exitcode-stdio-1.0
--   main-is:          Spec.hs
--   other-modules:    Data.ValidationSpec
--                   , Data.Validation.InternalSpec
--                   , Examples.Data.ComplexTypes
--                   , Examples.Data.Primitives
--                   , Examples.Data.ExampleSpec
--   hs-source-dirs:   test, examples
--   build-depends:    base
--                   , containers
--                   , data-validation
--                   , hspec
--                   , regex-tdfa
--                   , template-haskell
--   default-language:   Haskell2010
--   ghc-options:      -threaded -Wall
